--- a/ssm-auth-parent/ssm-auth-common/pom.xml
+++ b/ssm-auth-parent/ssm-auth-common/pom.xml
@@ -14,6 +14,8 @@
     <modules>
         <module>ssm-auth-common-util</module>
         <module>ssm-auth-service-util</module>
+        <module>ssm-auth-security</module>
+        <module>ssm-auth-common-log</module>
     </modules>
 
 
