--- a/ssm-auth-parent/ssm-auth-common/ssm-auth-common-log/pom.xml
+++ b/ssm-auth-parent/ssm-auth-common/ssm-auth-common-log/pom.xml
@@ -9,35 +9,33 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ssm-auth-service-util</artifactId>
-
+    <artifactId>ssm-auth-common-log</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.tedu.java</groupId>
-            <artifactId>ssm-auth-common-util</artifactId>
+            <artifactId>ssm-auth-model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.tedu.java</groupId>
+            <artifactId>ssm-auth-security</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-        </dependency>
-        <!--mysql-->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-            <scope>provided</scope>
+            <scope>provided </scope>
         </dependency>
     </dependencies>
+
 </project>
