--- a/ssm-auth-parent/ssm-auth-service-system/src/main/resources/application.yml
+++ b/ssm-auth-parent/ssm-auth-service-system/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 server:
   port: 8888
 spring:
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
   datasource:
-    url: jdbc:mysql://localhost:3306/SSMSECURITY?serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/SSMSECURITY?serverTimezone=Asia/Shanghai&characterEncoding=UTF-8
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -11,7 +14,18 @@ spring:
       encoding: utf-8
   application:
     name: service-system
+  redis:
+    host: 192.168.244.129
+    port: 6379
+    database: 0
+    timeout: 1800000
+    password:
+    jedis:
+      pool:
+        max-active: 20 #最大连接数
+        max-wait: -1    #最大阻塞等待时间(负数表示没限制)
+        max-idle: 5    #最大空闲
+        min-idle: 0     #最小空闲
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 查看日志
-
